--- a/Main_Exp_Only_Motor.ipynb
+++ b/Main_Exp_Only_Motor.ipynb
@@ -10,24 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import nidaqmx \n",
-    "import atiiaftt as ati\n",
-    "from nidaqmx.stream_readers import AnalogMultiChannelReader\n",
     "import time as Time\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import ftsensor\n",
     "import datetime as dt\n",
     "import csv\n",
     "import serial\n",
     "from time import sleep\n",
     "\n",
-    "sensor = ftsensor.ftsensor(tool_offset=[0,0,0,0,0,0])\n",
     "\n",
     "ENTER = bytes([0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFC])\n",
     "EXIT = bytes([0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFD])\n",
@@ -56,7 +51,7 @@
     "def receive():\n",
     "    global dT, q1_old, q2_old\n",
     "    # Read the response from the serial port\n",
-    "    received = serD.readline().decode().split()      \n",
+    "    received = ser.readline().decode().split()      \n",
     "\n",
     "    # Print the received bytes\n",
     "    # print(\"Received:\", received)\n",
@@ -116,18 +111,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Construct Serial Connection"
+    "# Construct Serial Connection"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# open the serial port\n",
-    "serD = serial.Serial('COM4', 115200, timeout=1) #Device\n",
-    "serS = serial.Serial('COM9', 115200, timeout=1) #Stepper\n"
+    "ser = serial.Serial('COM4', 115200, timeout=1)"
    ]
   },
   {
@@ -139,31 +133,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Begining\n",
-      "Starting Zero Position M1\n"
-     ]
-    },
-    {
-     "ename": "SerialException",
-     "evalue": "WriteFile failed (PermissionError(13, 'Access is denied.', None, 5))",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mSerialException\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[11], line 10\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[39m#M1\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mStarting Zero Position M1\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m---> 10\u001b[0m ser\u001b[39m.\u001b[39;49mwrite(\u001b[39mbytes\u001b[39;49m([\u001b[39m0x01\u001b[39;49m])\u001b[39m+\u001b[39;49mZERO)\n\u001b[0;32m     11\u001b[0m sleep(\u001b[39m3\u001b[39m)\n\u001b[0;32m     12\u001b[0m [\u001b[39mid\u001b[39m, p, v, t] \u001b[39m=\u001b[39m receive()\n",
-      "File \u001b[1;32mc:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\serial\\serialwin32.py:317\u001b[0m, in \u001b[0;36mSerial.write\u001b[1;34m(self, data)\u001b[0m\n\u001b[0;32m    315\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_write_timeout \u001b[39m!=\u001b[39m \u001b[39m0\u001b[39m:  \u001b[39m# if blocking (None) or w/ write timeout (>0)\u001b[39;00m\n\u001b[0;32m    316\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m success \u001b[39mand\u001b[39;00m win32\u001b[39m.\u001b[39mGetLastError() \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m (win32\u001b[39m.\u001b[39mERROR_SUCCESS, win32\u001b[39m.\u001b[39mERROR_IO_PENDING):\n\u001b[1;32m--> 317\u001b[0m         \u001b[39mraise\u001b[39;00m SerialException(\u001b[39m\"\u001b[39m\u001b[39mWriteFile failed (\u001b[39m\u001b[39m{!r}\u001b[39;00m\u001b[39m)\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(ctypes\u001b[39m.\u001b[39mWinError()))\n\u001b[0;32m    319\u001b[0m     \u001b[39m# Wait for the write to complete.\u001b[39;00m\n\u001b[0;32m    320\u001b[0m     \u001b[39m#~ win32.WaitForSingleObject(self._overlapped_write.hEvent, win32.INFINITE)\u001b[39;00m\n\u001b[0;32m    321\u001b[0m     win32\u001b[39m.\u001b[39mGetOverlappedResult(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_port_handle, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_overlapped_write, ctypes\u001b[39m.\u001b[39mbyref(n), \u001b[39mTrue\u001b[39;00m)\n",
-      "\u001b[1;31mSerialException\u001b[0m: WriteFile failed (PermissionError(13, 'Access is denied.', None, 5))"
-     ]
-    }
-   ],
    "source": [
     "print(\"Begining\")\n",
     "\n",
@@ -174,12 +146,12 @@
     "\n",
     "#M1\n",
     "print(\"Starting Zero Position M1\")\n",
-    "serD.write(bytes([0x01])+ZERO)\n",
+    "ser.write(bytes([0x01])+ZERO)\n",
     "sleep(3)\n",
     "[id, p, v, t] = receive()\n",
     "p = 5\n",
     "while abs(p) >= 0.001:\n",
-    "    serD.write(bytes([0x01])+ZERO)\n",
+    "    ser.write(bytes([0x01])+ZERO)\n",
     "    sleep(3)\n",
     "    [id, p, v, t] = receive()\n",
     "\n",
@@ -187,12 +159,12 @@
     "\n",
     "#M2\n",
     "print(\"Starting Zero Position M2\")\n",
-    "serD.write(bytes([0x02])+ZERO)\n",
+    "ser.write(bytes([0x02])+ZERO)\n",
     "sleep(3)\n",
     "[id, p, v, t] = receive()\n",
     "p = 5\n",
     "while abs(p) >= 0.001:\n",
-    "    serD.write(bytes([0x02])+ZERO)\n",
+    "    ser.write(bytes([0x02])+ZERO)\n",
     "    sleep(3)\n",
     "    [id, p, v, t] = receive()\n",
     "\n",
@@ -209,14 +181,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x:  0.2525735880010661 \ty:  0.15466469653504328\n"
+      "x:  0.25429877287966135 \ty:  0.17696805864412823\n"
      ]
     }
    ],
@@ -266,38 +238,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Enter Motor and Re-bias Force Sensor"
+    "# Enter Motor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\nidaqmx\\task.py:456: ResourceWarning: Attempted to close NI-DAQmx task of name \"_unnamedTask<1>\" but task was already closed.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
-   "source": [
-    "sensor.stop_task()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting Enter Motors\n",
-      "[-0.12183734907412555, -0.08729597905219542, -0.08806777784708338, -0.16463182964965875, 0.2018434911087244, -0.06506715629660617]\n"
+      "Starting Enter Motors\n"
      ]
     }
    ],
@@ -310,17 +263,18 @@
     "command2 = bytes(pack_cmd(0,0,0,0,0)) #(pos,vel,torque,kp,kd)\n",
     "\n",
     "#M1\n",
-    "serD.write(bytes([0x01])+command1)\n",
+    "ser.write(bytes([0x01])+command1)\n",
     "[id, p, v, t] = receive()\n",
     "\n",
     "#M2\n",
-    "serD.write(bytes([0x02])+command2)\n",
+    "ser.write(bytes([0x02])+command2)\n",
     "[id, p, v, t] = receive()\n",
+    "\n",
     "\n",
     "\n",
     "#M1\n",
     "print(\"Starting Enter Motors\")\n",
-    "serD.write(bytes([0x01])+ENTER)\n",
+    "ser.write(bytes([0x01])+ENTER)\n",
     "[id, p, v, t] = receive()\n",
     "if id == 1:\n",
     "    q1 = p\n",
@@ -331,7 +285,7 @@
     "    vel2 = v\n",
     "\n",
     "#M2\n",
-    "serD.write(bytes([0x02])+ENTER)\n",
+    "ser.write(bytes([0x02])+ENTER)\n",
     "[id, p, v, t] = receive()\n",
     "\n",
     "if id == 1:\n",
@@ -343,23 +297,7 @@
     "    vel2 = v\n",
     "\n",
     "q1_old = q1\n",
-    "q2_old = q2\n",
-    "\n",
-    "sleep(3)\n",
-    "\n",
-    "##Sensor\n",
-    "sensor.start_task()\n",
-    "current_time = Time.time()\n",
-    "duration = 1\n",
-    "values = []\n",
-    "while Time.time()< current_time + duration:\n",
-    "    values.append(np.array(sensor.read_avg_voltage()))\n",
-    "\n",
-    "values = np.array(values)\n",
-    "values = [ft.mean() for ft in values.transpose()]\n",
-    "sensor.set_bias(values)\n",
-    "sensor.stop_task()\n",
-    "print(values)\n"
+    "q2_old = q2\n"
    ]
   },
   {
@@ -367,33 +305,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Running"
+    "# Running"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Bias():\n",
-    "    sensor.stop_task()\n",
-    "\n",
-    "    sensor.start_task()\n",
-    "    current_time = Time.time()\n",
-    "    duration = 1\n",
-    "    values = []\n",
-    "    while Time.time()< current_time + duration:\n",
-    "        values.append(np.array(sensor.read_avg_voltage()))\n",
-    "\n",
-    "    values = np.array(values)\n",
-    "    values = [ft.mean() for ft in values.transpose()]\n",
-    "    sensor.set_bias(values)\n",
-    "    sensor.stop_task()\n",
-    "    # print(values)\n",
-    "\n",
-    "\n",
-    "\n",
     "def record_session(T1, T2):\n",
     "    global dT, q1_old, q2_old, q1, q2\n",
     "    print(f\"Starting T1 = {T1} and T2 = {T2}\")\n",
@@ -404,14 +324,13 @@
     "\n",
     "    logs = list()\n",
     "\n",
-    "    t_mapping = 1\n",
+    "    t_mapping = 1/1.35\n",
     "\n",
     "    command1 = bytes(pack_cmd(0,0,0,0,0)) #(pos,vel,torque,kp,kd)\n",
     "    command2 = bytes(pack_cmd(0,0,0,0,0)) #(pos,vel,torque,kp,kd)\n",
     "\n",
-    "\n",
     "    #M1\n",
-    "    serD.write(bytes([0x01])+command1)\n",
+    "    ser.write(bytes([0x01])+command1)\n",
     "    [id, p, v, t] = receive()\n",
     "\n",
     "    if id == 1:\n",
@@ -425,7 +344,7 @@
     "        t2 = t/t_mapping\n",
     "\n",
     "    #M2\n",
-    "    serD.write(bytes([0x02])+command2)\n",
+    "    ser.write(bytes([0x02])+command2)\n",
     "    [id, p, v, t] = receive()\n",
     "\n",
     "    if id == 1:\n",
@@ -437,19 +356,14 @@
     "        q2 = p\n",
     "        vel2 = v\n",
     "        t2 = t/t_mapping\n",
-    "    \n",
-    "    \n",
-    "    sleep(2)\n",
-    "    Bias()\n",
     "\n",
     "    x = l1*np.sin(q1) + l2*np.cos(q2)\n",
     "    y = l1*np.cos(q1) - l2*np.sin(q2)\n",
     "\n",
     "    time = 0\n",
-    "    record_duration = 5\n",
+    "    record_duration = 20\n",
     "\n",
     "    print(\"Start Controling\")\n",
-    "    sensor.start_task()\n",
     "    while time < record_duration:\n",
     "        start_time = dt.datetime.today().timestamp()\n",
     "\n",
@@ -469,7 +383,7 @@
     "        command2 = bytes(pack_cmd(0,0,-T2*t_mapping,0,0)) #(pos,vel,torque,kp,kd)\n",
     "\n",
     "        #M1\n",
-    "        serD.write(bytes([0x01])+command1)\n",
+    "        ser.write(bytes([0x01])+command1)\n",
     "        [id, p, v, t] = receive()\n",
     "\n",
     "        if id == 1:\n",
@@ -483,7 +397,7 @@
     "            t2 = t/t_mapping\n",
     "\n",
     "        #M2\n",
-    "        serD.write(bytes([0x02])+command2)\n",
+    "        ser.write(bytes([0x02])+command2)\n",
     "        [id, p, v, t] = receive()\n",
     "\n",
     "        if id == 1:\n",
@@ -529,52 +443,43 @@
     "        log.append(Fy)\n",
     "\n",
     "\n",
-    "        #Sensor\n",
-    "        reading = sensor.read_ft()\n",
-    "    \n",
-    "\n",
-    "        log.append(-reading[0])\n",
-    "        log.append(-reading[1])\n",
-    "\n",
     "        logs.append(log)\n",
     "        \n",
     "        # print(\"Progress\", f'{round(time/record_duration*100,3)}%')\n",
     "        dT = dt.datetime.today().timestamp()-start_time\n",
     "        time+= dT\n",
-    "    sensor.stop_task()\n",
+    "\n",
     "\n",
     "    command1 = bytes(pack_cmd(0,0,0,0,0)) #(pos,vel,torque,kp,kd)\n",
     "    command2 = bytes(pack_cmd(0,0,0,0,0)) #(pos,vel,torque,kp,kd)\n",
-    "\n",
+    "    \n",
     "    #M1\n",
-    "    serD.write(bytes([0x01])+command1)\n",
+    "    ser.write(bytes([0x01])+command1)\n",
     "    [id, p, v, t] = receive()\n",
     "\n",
     "    if id == 1:\n",
     "        q1 = p\n",
     "        vel1 = v\n",
     "        t1 = t/t_mapping\n",
-    "\n",
+    "    \n",
     "    elif id == 2:\n",
     "        q2 = p\n",
     "        vel2 = v\n",
     "        t2 = t/t_mapping\n",
     "\n",
     "    #M2\n",
-    "    serD.write(bytes([0x02])+command2)\n",
+    "    ser.write(bytes([0x02])+command2)\n",
     "    [id, p, v, t] = receive()\n",
     "\n",
     "    if id == 1:\n",
     "        q1 = p\n",
     "        vel1 = v\n",
     "        t1 = t/t_mapping\n",
-    "\n",
+    "    \n",
     "    elif id == 2:\n",
     "        q2 = p\n",
     "        vel2 = v\n",
     "        t2 = t/t_mapping\n",
-    "\n",
-    "    \n",
     "\n",
     "    print(f\"finishing T1 = {T1} and T2 = {T2}\")\n",
     "    return logs\n"
@@ -582,99 +487,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting T1 = 0 and T2 = 2\n",
-      "Start Controling\n",
-      "finishing T1 = 0 and T2 = 2\n",
       "Starting T1 = 2 and T2 = 0\n",
       "Start Controling\n",
-      "finishing T1 = 2 and T2 = 0\n",
-      "Starting T1 = 2 and T2 = 2\n",
-      "Start Controling\n",
-      "finishing T1 = 2 and T2 = 2\n",
-      "Starting T1 = 0 and T2 = -2\n",
-      "Start Controling\n",
-      "finishing T1 = 0 and T2 = -2\n",
-      "Starting T1 = -2 and T2 = 0\n",
-      "Start Controling\n",
-      "finishing T1 = -2 and T2 = 0\n",
-      "Starting T1 = -2 and T2 = -2\n",
-      "Start Controling\n",
-      "finishing T1 = -2 and T2 = -2\n",
-      "End all session\n"
+      "finishing T1 = 2 and T2 = 0\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(2, 0.628, -0.037, -0.006105006105006083)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "Folder = \"X025\"\n",
-    "torque_mag = 0\n",
-    "torque_settings = [[0, torque_mag], [torque_mag, 0], [torque_mag, torque_mag],\n",
-    "                   [0, -torque_mag], [-torque_mag, 0], [-torque_mag, -torque_mag]]\n",
+    "FB = record_session(2,0)\n",
     "\n",
-    "\n",
-    "while serS.readline().decode() != 4:\n",
-    "    serS.write(bytes(1))\n",
-    "\n",
-    "end = 0\n",
-    "while True:\n",
-    "\n",
-    "    command1 = bytes(pack_cmd(0,0,0,0,0)) #(pos,vel,torque,kp,kd)\n",
-    "    command2 = bytes(pack_cmd(0,0,0,0,0)) #(pos,vel,torque,kp,kd)\n",
-    "    #M1\n",
-    "    serD.write(bytes([0x01])+command1)\n",
-    "    [id, p, v, t] = receive()\n",
-    "    #M2\n",
-    "    serD.write(bytes([0x02])+command2)\n",
-    "    [id, p, v, t] = receive()     \n",
-    "    sleep(2)\n",
-    "    Bias()\n",
-    "\n",
-    "\n",
-    "    for session in torque_settings:\n",
-    "        logs = record_session(session[0], session[1])\n",
-    "        log_COLUMNS = [\"Time\", \"T1\", \"T2\", \"t1\", \"t2\", \"q1\", \"q2\", \"x\", \"y\", \"x_dot\", \"y_dot\", \"Fx\", \"Fy\", \"Fx_Mea\", \"Fy_Mea\"]\n",
-    "\n",
-    "        log_arrays = np.array([np.array(item) for item in logs])\n",
-    "\n",
-    "        log_arrays_transpose = log_arrays.transpose()\n",
-    "        df_log = pd.DataFrame([])\n",
-    "        for i in range(len(log_COLUMNS)):\n",
-    "            df_log[log_COLUMNS[i]] = log_arrays_transpose[i]\n",
-    "\n",
-    "        # print(df_log)\n",
-    "        df_log.to_csv(f\"Record_Data/{Folder}/Y{logs[10][9]}_T{session[0]}{session[1]}_Static.csv\")\n",
-    "\n",
-    "        yn = y\n",
-    "\n",
-    "        while yn-y < 0.01:\n",
-    "            serS.write(bytes(3))\n",
-    "            if serS.readline().decode() == 5:\n",
-    "                serS.write(bytes(1))\n",
-    "                end = 1\n",
-    "                sleep(0.5)\n",
-    "                break\n",
-    "            serS.write(bytes(2))\n",
-    "        \n",
-    "        if end == 1:\n",
-    "            break\n",
-    "\n",
-    "\n",
-    "##---Exit Motor---##\n",
-    "#M1\n",
-    "serD.write(bytes([0x01])+EXIT)\n",
+    "ser.write(bytes([0x01])+EXIT)\n",
     "receive()\n",
     "\n",
     "#M2\n",
-    "serD.write(bytes([0x02])+EXIT)\n",
-    "receive()\n",
-    "\n",
-    "print(\"End all session\")"
+    "ser.write(bytes([0x02])+EXIT)\n",
+    "receive()"
    ]
   },
   {
@@ -687,29 +531,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SerialException",
-     "evalue": "WriteFile failed (PermissionError(13, 'Access is denied.', None, 5))",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mSerialException\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[139], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m ser\u001b[39m.\u001b[39;49mwrite(\u001b[39mbytes\u001b[39;49m([\u001b[39m0x01\u001b[39;49m])\u001b[39m+\u001b[39;49mEXIT)\n\u001b[0;32m      2\u001b[0m receive()\n\u001b[0;32m      4\u001b[0m \u001b[39m#M2\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\serial\\serialwin32.py:317\u001b[0m, in \u001b[0;36mSerial.write\u001b[1;34m(self, data)\u001b[0m\n\u001b[0;32m    315\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_write_timeout \u001b[39m!=\u001b[39m \u001b[39m0\u001b[39m:  \u001b[39m# if blocking (None) or w/ write timeout (>0)\u001b[39;00m\n\u001b[0;32m    316\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m success \u001b[39mand\u001b[39;00m win32\u001b[39m.\u001b[39mGetLastError() \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m (win32\u001b[39m.\u001b[39mERROR_SUCCESS, win32\u001b[39m.\u001b[39mERROR_IO_PENDING):\n\u001b[1;32m--> 317\u001b[0m         \u001b[39mraise\u001b[39;00m SerialException(\u001b[39m\"\u001b[39m\u001b[39mWriteFile failed (\u001b[39m\u001b[39m{!r}\u001b[39;00m\u001b[39m)\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(ctypes\u001b[39m.\u001b[39mWinError()))\n\u001b[0;32m    319\u001b[0m     \u001b[39m# Wait for the write to complete.\u001b[39;00m\n\u001b[0;32m    320\u001b[0m     \u001b[39m#~ win32.WaitForSingleObject(self._overlapped_write.hEvent, win32.INFINITE)\u001b[39;00m\n\u001b[0;32m    321\u001b[0m     win32\u001b[39m.\u001b[39mGetOverlappedResult(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_port_handle, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_overlapped_write, ctypes\u001b[39m.\u001b[39mbyref(n), \u001b[39mTrue\u001b[39;00m)\n",
-      "\u001b[1;31mSerialException\u001b[0m: WriteFile failed (PermissionError(13, 'Access is denied.', None, 5))"
-     ]
+     "data": {
+      "text/plain": [
+       "(2, 0.406, -0.012, -0.006105006105006083)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "serD.write(bytes([0x01])+EXIT)\n",
+    "ser.write(bytes([0x01])+EXIT)\n",
     "receive()\n",
     "\n",
     "#M2\n",
-    "serD.write(bytes([0x02])+EXIT)\n",
-    "receive()\n"
+    "ser.write(bytes([0x02])+EXIT)\n",
+    "receive()"
    ]
   }
  ],
