--- a/Main_Exp_Code.ipynb
+++ b/Main_Exp_Code.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,30 +140,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Begining\n",
-      "Starting Zero Position M1\n"
-     ]
-    },
-    {
-     "ename": "SerialException",
-     "evalue": "WriteFile failed (PermissionError(13, 'Access is denied.', None, 5))",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mSerialException\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[11], line 10\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[39m#M1\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mStarting Zero Position M1\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m---> 10\u001b[0m ser\u001b[39m.\u001b[39;49mwrite(\u001b[39mbytes\u001b[39;49m([\u001b[39m0x01\u001b[39;49m])\u001b[39m+\u001b[39;49mZERO)\n\u001b[0;32m     11\u001b[0m sleep(\u001b[39m3\u001b[39m)\n\u001b[0;32m     12\u001b[0m [\u001b[39mid\u001b[39m, p, v, t] \u001b[39m=\u001b[39m receive()\n",
-      "File \u001b[1;32mc:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\serial\\serialwin32.py:317\u001b[0m, in \u001b[0;36mSerial.write\u001b[1;34m(self, data)\u001b[0m\n\u001b[0;32m    315\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_write_timeout \u001b[39m!=\u001b[39m \u001b[39m0\u001b[39m:  \u001b[39m# if blocking (None) or w/ write timeout (>0)\u001b[39;00m\n\u001b[0;32m    316\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m success \u001b[39mand\u001b[39;00m win32\u001b[39m.\u001b[39mGetLastError() \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m (win32\u001b[39m.\u001b[39mERROR_SUCCESS, win32\u001b[39m.\u001b[39mERROR_IO_PENDING):\n\u001b[1;32m--> 317\u001b[0m         \u001b[39mraise\u001b[39;00m SerialException(\u001b[39m\"\u001b[39m\u001b[39mWriteFile failed (\u001b[39m\u001b[39m{!r}\u001b[39;00m\u001b[39m)\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(ctypes\u001b[39m.\u001b[39mWinError()))\n\u001b[0;32m    319\u001b[0m     \u001b[39m# Wait for the write to complete.\u001b[39;00m\n\u001b[0;32m    320\u001b[0m     \u001b[39m#~ win32.WaitForSingleObject(self._overlapped_write.hEvent, win32.INFINITE)\u001b[39;00m\n\u001b[0;32m    321\u001b[0m     win32\u001b[39m.\u001b[39mGetOverlappedResult(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_port_handle, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_overlapped_write, ctypes\u001b[39m.\u001b[39mbyref(n), \u001b[39mTrue\u001b[39;00m)\n",
-      "\u001b[1;31mSerialException\u001b[0m: WriteFile failed (PermissionError(13, 'Access is denied.', None, 5))"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Begining\")\n",
     "\n",
@@ -209,14 +188,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x:  0.2525735880010661 \ty:  0.15466469653504328\n"
+      "x:  0.2510814816028888 \ty:  0.12648070731844185\n"
      ]
     }
    ],
@@ -229,7 +208,7 @@
     "command2 = bytes(pack_cmd(0,0,0,0,0)) #(pos,vel,torque,kp,kd)\n",
     "\n",
     "#M1\n",
-    "ser.write(bytes([0x01])+command1)\n",
+    "serD.write(bytes([0x01])+command1)\n",
     "[id, p, v, t] = receive()\n",
     "\n",
     "if id == 1:\n",
@@ -240,7 +219,7 @@
     "\n",
     "\n",
     "#M2\n",
-    "ser.write(bytes([0x02])+command2)\n",
+    "serD.write(bytes([0x02])+command2)\n",
     "[id, p, v, t] = receive()\n",
     "\n",
     "if id == 1:\n",
@@ -266,19 +245,161 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Test Stepper"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note\n",
+    "Distance of Path = 0.09623\n",
+    "Duration = 13.5s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Set Zero Stepper\")\n",
+    "FB = serS.read_all()\n",
+    "\n",
+    "while True:    \n",
+    "    FB = serS.readline().decode('utf-8').strip()\n",
+    "    if FB:\n",
+    "        if int(FB) == 4:\n",
+    "            serS.write(b'2')\n",
+    "            break\n",
+    "    else:\n",
+    "        serS.write(b'1')\n",
+    "\n",
+    "\n",
+    "step_distance = 1 #cm\n",
+    "step_time_stepper = step_distance*1.4\n",
+    "\n",
+    "print(\"Ending Zero Stepper\")\n",
+    "\n",
+    "sleep(2)\n",
+    "\n",
+    "count = 0\n",
+    "while count < 9:\n",
+    "    count +=1 \n",
+    "    FB = serS.readline().decode('utf-8').strip()\n",
+    "    if FB:\n",
+    "        if int(FB) == 5:\n",
+    "            serS.write(b'1')\n",
+    "            sleep(0.5)  \n",
+    "            serS.write(b'2')\n",
+    "            end = 1\n",
+    "            break\n",
+    "    \n",
+    "    if end == 1:\n",
+    "        break\n",
+    "\n",
+    "\n",
+    "    command1 = bytes(pack_cmd(0,0,0,0,0)) #(pos,vel,torque,kp,kd)\n",
+    "    command2 = bytes(pack_cmd(0,0,0,0,0)) #(pos,vel,torque,kp,kd)\n",
+    "\n",
+    "    serD.write(bytes([0x01])+command1)\n",
+    "    [id, p, v, t] = receive()\n",
+    "    serD.write(bytes([0x02])+command2)\n",
+    "    [id, p, v, t] = receive()\n",
+    "\n",
+    "    serD.write(bytes([0x01])+command1)\n",
+    "    [id, p, v, t] = receive()\n",
+    "    serD.write(bytes([0x02])+command2)\n",
+    "    [id, p, v, t] = receive()\n",
+    "\n",
+    "    #M1\n",
+    "    serD.write(bytes([0x01])+command1)\n",
+    "    [id, p, v, t] = receive()\n",
+    "    if id == 1:\n",
+    "        q1 = p\n",
+    "    \n",
+    "    elif id == 2:\n",
+    "        q2 = p\n",
+    "\n",
+    "    #M2\n",
+    "    serD.write(bytes([0x02])+command2)\n",
+    "    [id, p, v, t] = receive()\n",
+    "    if id == 1:\n",
+    "        q1 = p\n",
+    "    \n",
+    "    elif id == 2:\n",
+    "        q2 = p\n",
+    "\n",
+    "    y = l1*np.cos(q1) - l2*np.sin(q2)\n",
+    "\n",
+    "    \n",
+    "   \n",
+    "    serS.write(b'3')\n",
+    "    sleep(step_time_stepper)\n",
+    "    serS.write(b'2')\n",
+    "\n",
+    "    \n",
+    "\n",
+    "\n",
+    "    \n",
+    "\n",
+    "    serD.write(bytes([0x01])+command1)\n",
+    "    [id, p, v, t] = receive()\n",
+    "    serD.write(bytes([0x02])+command2)\n",
+    "    [id, p, v, t] = receive()\n",
+    "\n",
+    "    serD.write(bytes([0x01])+command1)\n",
+    "    [id, p, v, t] = receive()\n",
+    "    serD.write(bytes([0x02])+command2)\n",
+    "    [id, p, v, t] = receive()\n",
+    "\n",
+    "    #M1\n",
+    "    serD.write(bytes([0x01])+command1)\n",
+    "    [id, p, v, t] = receive()\n",
+    "    if id == 1:\n",
+    "        q1 = p\n",
+    "    \n",
+    "    elif id == 2:\n",
+    "        q2 = p\n",
+    "\n",
+    "    #M2\n",
+    "    serD.write(bytes([0x02])+command2)\n",
+    "    [id, p, v, t] = receive()\n",
+    "    if id == 1:\n",
+    "        q1 = p\n",
+    "    \n",
+    "    elif id == 2:\n",
+    "        q2 = p\n",
+    "\n",
+    "    yn = l1*np.cos(q1) - l2*np.sin(q2)\n",
+    "\n",
+    "    diff = yn-y\n",
+    "    \n",
+    "    print(\"y:\", y, \" yn: \", yn, \" diff: \", diff)\n",
+    "        \n",
+    "\n",
+    "    sleep(2)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Enter Motor and Re-bias Force Sensor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\nidaqmx\\task.py:456: ResourceWarning: Attempted to close NI-DAQmx task of name \"_unnamedTask<1>\" but task was already closed.\n",
+      "c:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\nidaqmx\\task.py:456: ResourceWarning: Attempted to close NI-DAQmx task of name \"_unnamedTask<0>\" but task was already closed.\n",
       "  warnings.warn(\n"
      ]
     }
@@ -289,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +418,7 @@
      "output_type": "stream",
      "text": [
       "Starting Enter Motors\n",
-      "[-0.12183734907412555, -0.08729597905219542, -0.08806777784708338, -0.16463182964965875, 0.2018434911087244, -0.06506715629660617]\n"
+      "[-0.10350478771352732, -0.07693746227472478, 0.15546013795073446, -0.1533385222075104, -0.035344011342818386, -0.09966167123140064]\n"
      ]
     }
    ],
@@ -367,19 +488,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Running"
+    "# Running"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def Bias():\n",
-    "    sensor.stop_task()\n",
     "\n",
-    "    sensor.start_task()\n",
     "    current_time = Time.time()\n",
     "    duration = 1\n",
     "    values = []\n",
@@ -389,13 +508,13 @@
     "    values = np.array(values)\n",
     "    values = [ft.mean() for ft in values.transpose()]\n",
     "    sensor.set_bias(values)\n",
-    "    sensor.stop_task()\n",
     "    # print(values)\n",
     "\n",
     "\n",
     "\n",
     "def record_session(T1, T2):\n",
     "    global dT, q1_old, q2_old, q1, q2\n",
+    "\n",
     "    print(f\"Starting T1 = {T1} and T2 = {T2}\")\n",
     "    start_time = dt.datetime.today().timestamp()\n",
     "    t = 0\n",
@@ -440,7 +559,7 @@
     "    \n",
     "    \n",
     "    sleep(2)\n",
-    "    Bias()\n",
+    "\n",
     "\n",
     "    x = l1*np.sin(q1) + l2*np.cos(q2)\n",
     "    y = l1*np.cos(q1) - l2*np.sin(q2)\n",
@@ -450,6 +569,7 @@
     "\n",
     "    print(\"Start Controling\")\n",
     "    sensor.start_task()\n",
+    "    Bias()\n",
     "    while time < record_duration:\n",
     "        start_time = dt.datetime.today().timestamp()\n",
     "\n",
@@ -582,13 +702,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Set Zero Stepper\n",
+      "Ending Zero Stepper\n",
+      "Starting T1 = 0 and T2 = 2\n",
+      "Start Controling\n",
+      "finishing T1 = 0 and T2 = 2\n",
+      "Starting T1 = 2 and T2 = 0\n",
+      "Start Controling\n",
+      "finishing T1 = 2 and T2 = 0\n",
+      "Starting T1 = 2 and T2 = 2\n",
+      "Start Controling\n",
+      "finishing T1 = 2 and T2 = 2\n",
+      "Starting T1 = 0 and T2 = -2\n",
+      "Start Controling\n",
+      "finishing T1 = 0 and T2 = -2\n",
+      "Starting T1 = -2 and T2 = 0\n",
+      "Start Controling\n",
+      "finishing T1 = -2 and T2 = 0\n",
+      "Starting T1 = -2 and T2 = -2\n",
+      "Start Controling\n",
+      "finishing T1 = -2 and T2 = -2\n",
+      "Starting T1 = 0 and T2 = 2\n",
+      "Start Controling\n",
+      "finishing T1 = 0 and T2 = 2\n",
+      "Starting T1 = 2 and T2 = 0\n",
+      "Start Controling\n",
+      "finishing T1 = 2 and T2 = 0\n",
+      "Starting T1 = 2 and T2 = 2\n",
+      "Start Controling\n",
+      "finishing T1 = 2 and T2 = 2\n",
+      "Starting T1 = 0 and T2 = -2\n",
+      "Start Controling\n",
+      "finishing T1 = 0 and T2 = -2\n",
+      "Starting T1 = -2 and T2 = 0\n",
+      "Start Controling\n",
+      "finishing T1 = -2 and T2 = 0\n",
+      "Starting T1 = -2 and T2 = -2\n",
+      "Start Controling\n",
+      "finishing T1 = -2 and T2 = -2\n",
+      "Starting T1 = 0 and T2 = 2\n",
+      "Start Controling\n",
+      "finishing T1 = 0 and T2 = 2\n",
+      "Starting T1 = 2 and T2 = 0\n",
+      "Start Controling\n",
+      "finishing T1 = 2 and T2 = 0\n",
+      "Starting T1 = 2 and T2 = 2\n",
+      "Start Controling\n",
+      "finishing T1 = 2 and T2 = 2\n",
+      "Starting T1 = 0 and T2 = -2\n",
+      "Start Controling\n",
+      "finishing T1 = 0 and T2 = -2\n",
+      "Starting T1 = -2 and T2 = 0\n",
+      "Start Controling\n",
+      "finishing T1 = -2 and T2 = 0\n",
+      "Starting T1 = -2 and T2 = -2\n",
+      "Start Controling\n",
+      "finishing T1 = -2 and T2 = -2\n",
       "Starting T1 = 0 and T2 = 2\n",
       "Start Controling\n",
       "finishing T1 = 0 and T2 = 2\n",
@@ -613,16 +789,35 @@
    ],
    "source": [
     "Folder = \"X025\"\n",
-    "torque_mag = 0\n",
+    "torque_mag = 2\n",
     "torque_settings = [[0, torque_mag], [torque_mag, 0], [torque_mag, torque_mag],\n",
     "                   [0, -torque_mag], [-torque_mag, 0], [-torque_mag, -torque_mag]]\n",
     "\n",
     "\n",
-    "while serS.readline().decode() != 4:\n",
-    "    serS.write(bytes(1))\n",
+    "print(\"Set Zero Stepper\")\n",
+    "\n",
+    "FB = serS.read_all()\n",
+    "while True:    \n",
+    "    FB = serS.readline().decode('utf-8').strip()\n",
+    "    if FB:\n",
+    "        if int(FB) == 4:\n",
+    "            serS.write(b'2')\n",
+    "            break\n",
+    "    else:\n",
+    "        serS.write(b'1')\n",
+    "\n",
+    "print(\"Ending Zero Stepper\")\n",
     "\n",
     "end = 0\n",
-    "while True:\n",
+    "count = 0\n",
+    "step_distance = 3 #cm\n",
+    "step_time_stepper = step_distance*1.4\n",
+    "total_dis = 9.623\n",
+    "total_count = round(total_dis//step_distance)\n",
+    "\n",
+    "while count < total_count+1:\n",
+    "\n",
+    "    count+=1\n",
     "\n",
     "    command1 = bytes(pack_cmd(0,0,0,0,0)) #(pos,vel,torque,kp,kd)\n",
     "    command2 = bytes(pack_cmd(0,0,0,0,0)) #(pos,vel,torque,kp,kd)\n",
@@ -633,8 +828,6 @@
     "    serD.write(bytes([0x02])+command2)\n",
     "    [id, p, v, t] = receive()     \n",
     "    sleep(2)\n",
-    "    Bias()\n",
-    "\n",
     "\n",
     "    for session in torque_settings:\n",
     "        logs = record_session(session[0], session[1])\n",
@@ -648,21 +841,26 @@
     "            df_log[log_COLUMNS[i]] = log_arrays_transpose[i]\n",
     "\n",
     "        # print(df_log)\n",
-    "        df_log.to_csv(f\"Record_Data/{Folder}/Y{logs[10][9]}_T{session[0]}{session[1]}_Static.csv\")\n",
+    "        y = round(df_log[\"y\"].mean()*100)\n",
+    "        df_log.to_csv(f\"Record_Data/{Folder}/Y{y}_T{session[0]}{session[1]}_Static.csv\")\n",
     "\n",
-    "        yn = y\n",
     "\n",
-    "        while yn-y < 0.01:\n",
-    "            serS.write(bytes(3))\n",
-    "            if serS.readline().decode() == 5:\n",
-    "                serS.write(bytes(1))\n",
-    "                end = 1\n",
-    "                sleep(0.5)\n",
-    "                break\n",
-    "            serS.write(bytes(2))\n",
-    "        \n",
-    "        if end == 1:\n",
+    "    if count > total_count:\n",
+    "        break\n",
+    "    \n",
+    "    serS.write(b'3')\n",
+    "    sleep(step_time_stepper)\n",
+    "    serS.write(b'2')\n",
+    "    \n",
+    "    FB = serS.read_all()   \n",
+    "    FB = serS.readline().decode('utf-8').strip()\n",
+    "    if FB:\n",
+    "        if int(FB) == 5:\n",
+    "            serS.write(b'1')\n",
+    "            sleep(0.5)\n",
+    "            serS.write(b'2')\n",
     "            break\n",
+    "    \n",
     "\n",
     "\n",
     "##---Exit Motor---##\n",
@@ -687,29 +885,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SerialException",
-     "evalue": "WriteFile failed (PermissionError(13, 'Access is denied.', None, 5))",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mSerialException\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[139], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m ser\u001b[39m.\u001b[39;49mwrite(\u001b[39mbytes\u001b[39;49m([\u001b[39m0x01\u001b[39;49m])\u001b[39m+\u001b[39;49mEXIT)\n\u001b[0;32m      2\u001b[0m receive()\n\u001b[0;32m      4\u001b[0m \u001b[39m#M2\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\serial\\serialwin32.py:317\u001b[0m, in \u001b[0;36mSerial.write\u001b[1;34m(self, data)\u001b[0m\n\u001b[0;32m    315\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_write_timeout \u001b[39m!=\u001b[39m \u001b[39m0\u001b[39m:  \u001b[39m# if blocking (None) or w/ write timeout (>0)\u001b[39;00m\n\u001b[0;32m    316\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m success \u001b[39mand\u001b[39;00m win32\u001b[39m.\u001b[39mGetLastError() \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m (win32\u001b[39m.\u001b[39mERROR_SUCCESS, win32\u001b[39m.\u001b[39mERROR_IO_PENDING):\n\u001b[1;32m--> 317\u001b[0m         \u001b[39mraise\u001b[39;00m SerialException(\u001b[39m\"\u001b[39m\u001b[39mWriteFile failed (\u001b[39m\u001b[39m{!r}\u001b[39;00m\u001b[39m)\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(ctypes\u001b[39m.\u001b[39mWinError()))\n\u001b[0;32m    319\u001b[0m     \u001b[39m# Wait for the write to complete.\u001b[39;00m\n\u001b[0;32m    320\u001b[0m     \u001b[39m#~ win32.WaitForSingleObject(self._overlapped_write.hEvent, win32.INFINITE)\u001b[39;00m\n\u001b[0;32m    321\u001b[0m     win32\u001b[39m.\u001b[39mGetOverlappedResult(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_port_handle, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_overlapped_write, ctypes\u001b[39m.\u001b[39mbyref(n), \u001b[39mTrue\u001b[39;00m)\n",
-      "\u001b[1;31mSerialException\u001b[0m: WriteFile failed (PermissionError(13, 'Access is denied.', None, 5))"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "serS.write(b'2')\n",
+    "\n",
+    "command1 = bytes(pack_cmd(0,0,0,0,0)) #(pos,vel,torque,kp,kd)\n",
+    "command2 = bytes(pack_cmd(0,0,0,0,0)) #(pos,vel,torque,kp,kd)\n",
+    "\n",
+    "#M1\n",
+    "serD.write(bytes([0x01])+command1)\n",
+    "[id, p, v, t] = receive()\n",
+    "#M2\n",
+    "serD.write(bytes([0x02])+command2)\n",
+    "[id, p, v, t] = receive()\n",
+    "\n",
+    "\n",
     "serD.write(bytes([0x01])+EXIT)\n",
     "receive()\n",
     "\n",
     "#M2\n",
     "serD.write(bytes([0x02])+EXIT)\n",
-    "receive()\n"
+    "receive()\n",
+    "\n",
+    "serD.close()\n",
+    "serS.close()\n",
+    "\n",
+    "sensor.stop_task()\n"
    ]
   }
  ],
